// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders 1`] = `
<aside
  className="wrapper"
>
  <div
    className="body"
  >
    <span>
      Test
    </span>
  </div>
</aside>
`;

exports[`Card renders a light variant 1`] = `
<aside
  className="wrapper light"
>
  <div
    className="body"
  >
    Test
  </div>
</aside>
`;
